// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SubForm /> should render sub form with description 1`] = `
<ContextProvider
  value={
    Object {
      "active": undefined,
      "afterSilentRegistration": [Function],
      "batch": [Function],
      "blur": [Function],
      "change": [Function],
      "clearedValue": undefined,
      "concat": [Function],
      "destroyOnUnregister": undefined,
      "dirty": false,
      "dirtyFields": Object {},
      "dirtyFieldsSinceLastSubmit": Object {},
      "dirtySinceLastSubmit": false,
      "error": undefined,
      "errors": Object {},
      "fieldListeners": Object {
        "1606921369468": Object {
          "count": 1,
          "fields": Object {
            "1606921369468": Object {
              "afterSubmit": undefined,
              "beforeSubmit": undefined,
              "isEqual": undefined,
              "render": [Function],
              "subscription": undefined,
              "validate": undefined,
            },
          },
          "validateFields": undefined,
        },
      },
      "fileInputs": Array [],
      "focus": [Function],
      "forEach": [Function],
      "formOptions": Object {
        "active": undefined,
        "afterSilentRegistration": [Function],
        "batch": [Function],
        "blur": [Function],
        "change": [Function],
        "destroyOnUnregister": undefined,
        "dirty": false,
        "dirtyFields": Object {},
        "dirtyFieldsSinceLastSubmit": Object {},
        "dirtySinceLastSubmit": false,
        "error": undefined,
        "errors": Object {},
        "fieldListeners": Object {
          "1606921369468": Object {
            "count": 1,
            "fields": Object {
              "1606921369468": Object {
                "afterSubmit": undefined,
                "beforeSubmit": undefined,
                "isEqual": undefined,
                "render": [Function],
                "subscription": undefined,
                "validate": undefined,
              },
            },
            "validateFields": undefined,
          },
        },
        "fileInputs": Array [],
        "focus": [Function],
        "getFieldState": [Function],
        "getFieldValue": [Function],
        "getRegisteredFields": [Function],
        "getState": [Function],
        "handleSubmit": [Function],
        "hasSubmitErrors": false,
        "hasValidationErrors": false,
        "initialValues": Object {},
        "initialize": [Function],
        "invalid": false,
        "isValidationPaused": [Function],
        "modified": Object {},
        "modifiedSinceLastSubmit": false,
        "pauseValidation": [Function],
        "pristine": true,
        "registerAsyncValidator": [Function],
        "registerField": [Function],
        "registerInputFile": [Function],
        "registeredFields": Array [],
        "rerender": [Function],
        "reset": [Function],
        "resetFieldState": [Function],
        "restart": [Function],
        "resumeValidation": [Function],
        "setConfig": [Function],
        "setFieldState": [Function],
        "submit": [Function],
        "submitError": undefined,
        "submitErrors": undefined,
        "submitFailed": false,
        "submitSucceeded": false,
        "submitting": false,
        "subscribe": [Function],
        "touched": Object {},
        "unregisterField": [Function],
        "unregisterInputFile": [Function],
        "unsubscribe": [Function],
        "updateError": [Function],
        "updateValid": [Function],
        "valid": true,
        "validating": false,
        "values": Object {},
        "visited": Object {},
      },
      "getFieldState": [Function],
      "getFieldValue": [Function],
      "getRegisteredFields": [Function],
      "getState": [Function],
      "handleSubmit": [Function],
      "hasSubmitErrors": false,
      "hasValidationErrors": false,
      "initialValues": Object {},
      "initialize": [Function],
      "insert": [Function],
      "invalid": false,
      "isValidationPaused": [Function],
      "map": [Function],
      "modified": Object {},
      "modifiedSinceLastSubmit": false,
      "move": [Function],
      "pauseValidation": [Function],
      "pop": [Function],
      "pristine": true,
      "push": [Function],
      "registerAsyncValidator": [Function],
      "registerField": [Function],
      "registerInputFile": [Function],
      "registeredFields": Array [],
      "remove": [Function],
      "removeBatch": [Function],
      "rerender": [Function],
      "reset": [Function],
      "resetFieldState": [Function],
      "restart": [Function],
      "resumeValidation": [Function],
      "setConfig": [Function],
      "setFieldState": [Function],
      "shift": [Function],
      "submit": [Function],
      "submitError": undefined,
      "submitErrors": undefined,
      "submitFailed": false,
      "submitSucceeded": false,
      "submitting": false,
      "subscribe": [Function],
      "swap": [Function],
      "touched": Object {},
      "unregisterField": [Function],
      "unregisterInputFile": [Function],
      "unshift": [Function],
      "unsubscribe": [Function],
      "update": [Function],
      "updateError": [Function],
      "updateValid": [Function],
      "valid": true,
      "validating": false,
      "values": Object {},
      "visited": Object {},
    }
  }
>
  <ContextConsumer>
    <Component />
  </ContextConsumer>
</ContextProvider>
`;

exports[`<SubForm /> should render sub form with title 1`] = `
<ContextProvider
  value={
    Object {
      "active": undefined,
      "afterSilentRegistration": [Function],
      "batch": [Function],
      "blur": [Function],
      "change": [Function],
      "clearedValue": undefined,
      "concat": [Function],
      "destroyOnUnregister": undefined,
      "dirty": false,
      "dirtyFields": Object {},
      "dirtyFieldsSinceLastSubmit": Object {},
      "dirtySinceLastSubmit": false,
      "error": undefined,
      "errors": Object {},
      "fieldListeners": Object {
        "1606921381389": Object {
          "count": 1,
          "fields": Object {
            "1606921381389": Object {
              "afterSubmit": undefined,
              "beforeSubmit": undefined,
              "isEqual": undefined,
              "render": [Function],
              "subscription": undefined,
              "validate": undefined,
            },
          },
          "validateFields": undefined,
        },
      },
      "fileInputs": Array [],
      "focus": [Function],
      "forEach": [Function],
      "formOptions": Object {
        "active": undefined,
        "afterSilentRegistration": [Function],
        "batch": [Function],
        "blur": [Function],
        "change": [Function],
        "destroyOnUnregister": undefined,
        "dirty": false,
        "dirtyFields": Object {},
        "dirtyFieldsSinceLastSubmit": Object {},
        "dirtySinceLastSubmit": false,
        "error": undefined,
        "errors": Object {},
        "fieldListeners": Object {
          "1606921381389": Object {
            "count": 1,
            "fields": Object {
              "1606921381389": Object {
                "afterSubmit": undefined,
                "beforeSubmit": undefined,
                "isEqual": undefined,
                "render": [Function],
                "subscription": undefined,
                "validate": undefined,
              },
            },
            "validateFields": undefined,
          },
        },
        "fileInputs": Array [],
        "focus": [Function],
        "getFieldState": [Function],
        "getFieldValue": [Function],
        "getRegisteredFields": [Function],
        "getState": [Function],
        "handleSubmit": [Function],
        "hasSubmitErrors": false,
        "hasValidationErrors": false,
        "initialValues": Object {},
        "initialize": [Function],
        "invalid": false,
        "isValidationPaused": [Function],
        "modified": Object {},
        "modifiedSinceLastSubmit": false,
        "pauseValidation": [Function],
        "pristine": true,
        "registerAsyncValidator": [Function],
        "registerField": [Function],
        "registerInputFile": [Function],
        "registeredFields": Array [],
        "rerender": [Function],
        "reset": [Function],
        "resetFieldState": [Function],
        "restart": [Function],
        "resumeValidation": [Function],
        "setConfig": [Function],
        "setFieldState": [Function],
        "submit": [Function],
        "submitError": undefined,
        "submitErrors": undefined,
        "submitFailed": false,
        "submitSucceeded": false,
        "submitting": false,
        "subscribe": [Function],
        "touched": Object {},
        "unregisterField": [Function],
        "unregisterInputFile": [Function],
        "unsubscribe": [Function],
        "updateError": [Function],
        "updateValid": [Function],
        "valid": true,
        "validating": false,
        "values": Object {},
        "visited": Object {},
      },
      "getFieldState": [Function],
      "getFieldValue": [Function],
      "getRegisteredFields": [Function],
      "getState": [Function],
      "handleSubmit": [Function],
      "hasSubmitErrors": false,
      "hasValidationErrors": false,
      "initialValues": Object {},
      "initialize": [Function],
      "insert": [Function],
      "invalid": false,
      "isValidationPaused": [Function],
      "map": [Function],
      "modified": Object {},
      "modifiedSinceLastSubmit": false,
      "move": [Function],
      "pauseValidation": [Function],
      "pop": [Function],
      "pristine": true,
      "push": [Function],
      "registerAsyncValidator": [Function],
      "registerField": [Function],
      "registerInputFile": [Function],
      "registeredFields": Array [],
      "remove": [Function],
      "removeBatch": [Function],
      "rerender": [Function],
      "reset": [Function],
      "resetFieldState": [Function],
      "restart": [Function],
      "resumeValidation": [Function],
      "setConfig": [Function],
      "setFieldState": [Function],
      "shift": [Function],
      "submit": [Function],
      "submitError": undefined,
      "submitErrors": undefined,
      "submitFailed": false,
      "submitSucceeded": false,
      "submitting": false,
      "subscribe": [Function],
      "swap": [Function],
      "touched": Object {},
      "unregisterField": [Function],
      "unregisterInputFile": [Function],
      "unshift": [Function],
      "unsubscribe": [Function],
      "update": [Function],
      "updateError": [Function],
      "updateValid": [Function],
      "valid": true,
      "validating": false,
      "values": Object {},
      "visited": Object {},
    }
  }
>
  <ContextConsumer>
    <Component />
  </ContextConsumer>
</ContextProvider>
`;

exports[`<SubForm /> should render sub form with title and description 1`] = `
<ContextProvider
  value={
    Object {
      "active": undefined,
      "afterSilentRegistration": [Function],
      "batch": [Function],
      "blur": [Function],
      "change": [Function],
      "clearedValue": undefined,
      "concat": [Function],
      "destroyOnUnregister": undefined,
      "dirty": false,
      "dirtyFields": Object {},
      "dirtyFieldsSinceLastSubmit": Object {},
      "dirtySinceLastSubmit": false,
      "error": undefined,
      "errors": Object {},
      "fieldListeners": Object {
        "1606921361335": Object {
          "count": 1,
          "fields": Object {
            "1606921361335": Object {
              "afterSubmit": undefined,
              "beforeSubmit": undefined,
              "isEqual": undefined,
              "render": [Function],
              "subscription": undefined,
              "validate": undefined,
            },
          },
          "validateFields": undefined,
        },
      },
      "fileInputs": Array [],
      "focus": [Function],
      "forEach": [Function],
      "formOptions": Object {
        "active": undefined,
        "afterSilentRegistration": [Function],
        "batch": [Function],
        "blur": [Function],
        "change": [Function],
        "destroyOnUnregister": undefined,
        "dirty": false,
        "dirtyFields": Object {},
        "dirtyFieldsSinceLastSubmit": Object {},
        "dirtySinceLastSubmit": false,
        "error": undefined,
        "errors": Object {},
        "fieldListeners": Object {
          "1606921361335": Object {
            "count": 1,
            "fields": Object {
              "1606921361335": Object {
                "afterSubmit": undefined,
                "beforeSubmit": undefined,
                "isEqual": undefined,
                "render": [Function],
                "subscription": undefined,
                "validate": undefined,
              },
            },
            "validateFields": undefined,
          },
        },
        "fileInputs": Array [],
        "focus": [Function],
        "getFieldState": [Function],
        "getFieldValue": [Function],
        "getRegisteredFields": [Function],
        "getState": [Function],
        "handleSubmit": [Function],
        "hasSubmitErrors": false,
        "hasValidationErrors": false,
        "initialValues": Object {},
        "initialize": [Function],
        "invalid": false,
        "isValidationPaused": [Function],
        "modified": Object {},
        "modifiedSinceLastSubmit": false,
        "pauseValidation": [Function],
        "pristine": true,
        "registerAsyncValidator": [Function],
        "registerField": [Function],
        "registerInputFile": [Function],
        "registeredFields": Array [],
        "rerender": [Function],
        "reset": [Function],
        "resetFieldState": [Function],
        "restart": [Function],
        "resumeValidation": [Function],
        "setConfig": [Function],
        "setFieldState": [Function],
        "submit": [Function],
        "submitError": undefined,
        "submitErrors": undefined,
        "submitFailed": false,
        "submitSucceeded": false,
        "submitting": false,
        "subscribe": [Function],
        "touched": Object {},
        "unregisterField": [Function],
        "unregisterInputFile": [Function],
        "unsubscribe": [Function],
        "updateError": [Function],
        "updateValid": [Function],
        "valid": true,
        "validating": false,
        "values": Object {},
        "visited": Object {},
      },
      "getFieldState": [Function],
      "getFieldValue": [Function],
      "getRegisteredFields": [Function],
      "getState": [Function],
      "handleSubmit": [Function],
      "hasSubmitErrors": false,
      "hasValidationErrors": false,
      "initialValues": Object {},
      "initialize": [Function],
      "insert": [Function],
      "invalid": false,
      "isValidationPaused": [Function],
      "map": [Function],
      "modified": Object {},
      "modifiedSinceLastSubmit": false,
      "move": [Function],
      "pauseValidation": [Function],
      "pop": [Function],
      "pristine": true,
      "push": [Function],
      "registerAsyncValidator": [Function],
      "registerField": [Function],
      "registerInputFile": [Function],
      "registeredFields": Array [],
      "remove": [Function],
      "removeBatch": [Function],
      "rerender": [Function],
      "reset": [Function],
      "resetFieldState": [Function],
      "restart": [Function],
      "resumeValidation": [Function],
      "setConfig": [Function],
      "setFieldState": [Function],
      "shift": [Function],
      "submit": [Function],
      "submitError": undefined,
      "submitErrors": undefined,
      "submitFailed": false,
      "submitSucceeded": false,
      "submitting": false,
      "subscribe": [Function],
      "swap": [Function],
      "touched": Object {},
      "unregisterField": [Function],
      "unregisterInputFile": [Function],
      "unshift": [Function],
      "unsubscribe": [Function],
      "update": [Function],
      "updateError": [Function],
      "updateValid": [Function],
      "valid": true,
      "validating": false,
      "values": Object {},
      "visited": Object {},
    }
  }
>
  <ContextConsumer>
    <Component />
  </ContextConsumer>
</ContextProvider>
`;
